--- a/html/inicio.html
+++ b/html/inicio.html
@@ -2,19 +2,17 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Papelaria Japuiba</title>
-    <link rel="stylesheet" href="../css/inicio.css">
-    <link rel="icon" href="./img/logotipo-papelaria-japuiba (1).png" type="image/x-icon">
-    <link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-/>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Papelaria Japuiba</title>
+  <link rel="stylesheet" href="../css/inicio.css">
+  <link rel="icon" href="./img/logotipo-papelaria-japuiba (1).png" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
-  
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
+
 
 </head>
 
@@ -65,64 +63,66 @@
         <img src="../img/3.png" class="d-block w-100" alt="...">
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+      data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+      data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
   </div>
 
 
-<br>
-<section>
-  <div class="categorias">
-    <div>
-    <img src="../img/marcatexto.04.png" alt="" class="categorias-hover">
-    <p>Marcadores</p>
-  </div>
-  <div>
-    <img src="../img/cadernos.04.png" alt="" class="categorias-hover">
-    <p>Cadernos</p>
-  </div>
-  <div>
-    <img src="../img/presentes.04.png" alt="" class="categorias-hover">
-    <p>Presentes</p>
-  </div>
-  <div>
-    <img src="../img/canecas.04.png" alt="" class="categorias-hover">
-    <p>Copos </p>
-  </div>
-  <div>
-    <img src="../img/decoracao.04.png" alt="" class="categorias-hover">
-    <p>Decoração</p>
-  </div>
-  <div>
-    <img src="../img/almofadas.04.png" alt="" class="categorias-hover">
-    <p>Almofadas</p>
-  </div>
-  </div>
-</section>
- 
-<br> <br>
+  <br>
+  <section>
+    <div class="categorias">
+      <div>
+        <img src="../img/marcatexto.04.png" alt="" class="categorias-hover">
+        <p>Marcadores</p>
+      </div>
+      <div>
+        <img src="../img/cadernos.04.png" alt="" class="categorias-hover">
+        <p>Cadernos</p>
+      </div>
+      <div>
+        <img src="../img/presentes.04.png" alt="" class="categorias-hover">
+        <p>Presentes</p>
+      </div>
+      <div>
+        <img src="../img/canecas.04.png" alt="" class="categorias-hover">
+        <p>Copos </p>
+      </div>
+      <div>
+        <img src="../img/decoracao.04.png" alt="" class="categorias-hover">
+        <p>Decoração</p>
+      </div>
+      <div>
+        <img src="../img/almofadas.04.png" alt="" class="categorias-hover">
+        <p>Almofadas</p>
+      </div>
+    </div>
+  </section>
 
-<div class="pagina">
-  
-  <div class="container">
-    <div class="novidade">
-    <h2>Novidades</h2>
-    <a href="produtos.html" class="ver">Ver tudo <i class="bi bi-arrow-right"></i></a>
+  <br> <br>
+
+  <div class="pagina">
+
+    <div class="container">
+      <div class="novidade">
+        <h2>Novidades</h2>
+        <a href="produtos.html" class="ver">Ver tudo <i class="bi bi-arrow-right"></i></a>
+      </div>
+      <ul id="card-lista" class="card-lista">
+      </ul>
+    </div>
   </div>
-    <ul id="card-lista" class="card-lista">
-    </ul>
-   </div>
+
   </div>
-  
- </div>
- </div>
- 
+  </div>
+
 
   <section class="grid">
     <div class="grid-item">
@@ -141,57 +141,68 @@
       <img class="grid2" src="../img/01.04..jpg" alt="Cadernos">
     </div>
 
-</section>
-<div class="pagina">
-  
-  <section class="primeiro-h">
-    <div>
-      <h2>Produtos canhotos</h2>
-      <p>referem-se a itens projetados especificamente para pessoas canhotas,
-        <br> ou seja, aquelas que usam a mão esquerda como dominante para realizar <br> atividades cotidianas.
-       Como o mundo é predominantemente projetado para destros,  <br>  esses produtos ajudam a facilitar 
-         a vida dos canhotos, proporcionando conforto, <br> eficiência e segurança.</p>
-        
-    </div>
-    <img id="imagem0" src="../img/porenquanto.webp" alt="">
   </section>
+  <div class="pagina">
 
-  <section class="segundo-h">
-    <div>
-      <h2>Produtos recicláveis</h2>
-      <p>Produtos recicláveis são itens que podem ser processados e transformados <br>
-        em novos materiais ou produtos, ajudando a reduzir o consumo de recursos <br>
-         naturais, diminuir o lixo nos aterros e combater a poluição. <br>
+    <section class="primeiro-h">
+      <div>
+        <h2>Produtos canhotos</h2>
+        <p>referem-se a itens projetados especificamente para pessoas canhotas,
+          <br> ou seja, aquelas que usam a mão esquerda como dominante para realizar <br> atividades cotidianas.
+          Como o mundo é predominantemente projetado para destros, <br> esses produtos ajudam a facilitar
+          a vida dos canhotos, proporcionando conforto, <br> eficiência e segurança.
+        </p>
+
+      </div>
+      <img id="imagem0" src="../img/porenquanto.webp" alt="">
+    </section>
+
+    <section class="segundo-h">
+      <div>
+        <h2>Produtos recicláveis</h2>
+        <p>Produtos recicláveis são itens que podem ser processados e transformados <br>
+          em novos materiais ou produtos, ajudando a reduzir o consumo de recursos <br>
+          naturais, diminuir o lixo nos aterros e combater a poluição. <br>
           Esses produtos são feitos de materiais que têm potencial de ser reaproveitados <br>
-            após o descarte, se corretamente separados e enviados para reciclagem.</p>
-            
-    </div>
-    <img id="imagem1" src="../img/pexels-karolina-grabowska-7692890 (1).jpg" alt="">
-  </section>
- 
-  <footer>
-    <div>
-      <h1>Mapa do site</h1>
-      <a href="#home">Inicio</a>
-      <a href="./html/sobre.html">Sobre</a>
-      <a href="./html/produtos.html">Produtos</a>
-      <a href="./html/contato.html">Contato</a>
-    </div>
-    <img src="../img/Captura de Tela (145).png" alt="Mapa">
-    <div>
-      <h1>Marcas</h1>
-      <p>Tilibra</p>
-      <p>Foroni</p>
-      <p>Faber Castell</p>
-      <p>Jandaia</p>
-    </div>
-    <button>
-      <a href="#home"><img src="../img/chevron-up.svg" alt="Seta para cima"></a>
-    </button>
-  </footer>
-  
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-     <script src="../js/inicio.js"></script>
-     <script src="../js/contato.js"></script>
+          após o descarte, se corretamente separados e enviados para reciclagem.</p>
+
+      </div>
+      <img id="imagem1" src="../img/pexels-karolina-grabowska-7692890 (1).jpg" alt="">
+    </section>
+
+    <footer>
+      <div>
+        <h1>Mapa do site</h1>
+        <a href="#home">Inicio</a>
+        <a href="sobre.html">Sobre</a>
+        <a href="produtos.html">Produtos</a>
+        <a href="contato.html">Contato</a>
+      </div>
+
+      <div>
+        <h1>Marcas</h1>
+        <a href="https://www.tilibraexpress.com.br/?gad_source=1&gclid=EAIaIQobChMIjdGu7OSHigMV9lVIAB3LXAENEAAYASAAEgL2xfD_BwE">Tilibra</a>
+        <a href="https://www.foroni.com.br/">Foroni</a>
+        <a href="https://www.lojafabercastell.com.br/?srsltid=AfmBOoogF__wWGtYidJ_tdDmtv6hpt0gi5M_2x3jYfV273j977hr1ZFU">Faber Castell</a>
+        <a href="https://atacadojandaia.com.br/vitrine">Jandaia</a>
+      </div>
+
+      <button>
+        <a href="#home"><img src="../img/chevron-up.svg" alt="Seta para cima"></a>
+      </button>
+
+      <div class="mapBox">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7317.28317764997!2d-46.662999719604464!3d-23.509415733734464!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cef7e56ae99d91%3A0x27b42065c81f2458!2sR.%20Ant%C3%B4nio%20Lopes%20Marin%2C%2077%20-%20Casa%20Verde%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2002516-050%2C%20Brasil!5e0!3m2!1spt-BR!2sus!4v1733094235655!5m2!1spt-BR!2sus"
+          style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"></script>
+    <script src="../js/inicio.js"></script>
+    <script src="../js/contato.js"></script>
 </body>
+
 </html>
