--- a/html/produtos.html
+++ b/html/produtos.html
@@ -83,26 +83,36 @@
     </div>
   </div>
 
+<!-- FOOTER -->
+   
   <footer>
     <div>
       <h1>Mapa do site</h1>
-      <a href="../index.html">Inicio</a>
-      <a href="../html/sobre.html">Sobre</a>
+      <a href="inicio.html">Inicio</a>
+      <a href="sobre.html">Sobre</a>
       <a href="#home">Produtos</a>
-      <a href="../html/contato.html">Contato</a>
+      <a href="contato.html">Contato</a>
     </div>
-    <img src="../img/Captura de Tela (145).png" alt="">
+
     <div>
       <h1>Marcas</h1>
-      <p>Tilibra</p>
-      <p>Foroni</p>
-      <p>Faber Castell</p>
-      <p>Jandaia</p>
+      <a href="https://www.tilibraexpress.com.br/?gad_source=1&gclid=EAIaIQobChMIjdGu7OSHigMV9lVIAB3LXAENEAAYASAAEgL2xfD_BwE">Tilibra</a>
+      <a href="https://www.foroni.com.br/">Foroni</a>
+      <a href="https://www.lojafabercastell.com.br/?srsltid=AfmBOoogF__wWGtYidJ_tdDmtv6hpt0gi5M_2x3jYfV273j977hr1ZFU">Faber Castell</a>
+      <a href="https://atacadojandaia.com.br/vitrine">Jandaia</a>
     </div>
+
     <button>
-      <a href="#home"> <img src="../img/chevron-up.svg" alt=""></a>
+      <a href="#home"><img src="../img/chevron-up.svg" alt="Seta para cima"></a>
     </button>
+
+    <div class="mapBox">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7317.28317764997!2d-46.662999719604464!3d-23.509415733734464!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cef7e56ae99d91%3A0x27b42065c81f2458!2sR.%20Ant%C3%B4nio%20Lopes%20Marin%2C%2077%20-%20Casa%20Verde%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2002516-050%2C%20Brasil!5e0!3m2!1spt-BR!2sus!4v1733094235655!5m2!1spt-BR!2sus"
+        style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
   </footer>
+
   <script src="../script.js"></script>
   <script src="../js/contato.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
