--- a/html/sobre.html
+++ b/html/sobre.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
   <link rel="stylesheet" href="../css/sobre.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -45,7 +46,9 @@
     <header class="texto">
       <section>
         <h1>Papelaria Japuiba</h1>
-        <p>A Papelaria Japuiba oferece uma variedade de <br> materiais escolares e de escritório, incluindo<br>cadernos,fichários,canetas,agendas,pastas e <br>suprimentos para informática,com marcas <br>renomadas como Tilibra e Faber-Castell.</p>
+        <p>A Papelaria Japuiba oferece uma variedade de <br> materiais escolares e de escritório,
+          incluindo<br>cadernos,fichários,canetas,agendas,pastas e <br>suprimentos para informática,com marcas
+          <br>renomadas como Tilibra e Faber-Castell.</p>
         <a href="#historia">Veja a nossa Historia</a>
       </section>
 
@@ -60,12 +63,17 @@
     <h1 id="titulo-h">Historico</h1>
 
     <section class="historia-conteudo">
-      
+
       <section class="primeiro-h">
         <div>
           <h2>1965 - 1980</h2>
           <p>A ladeira da rua Japuiba nº42, abriga o Bazar e Papelaria Japuiba. <br>
-            fundado pelo casal Domingos e Maria Kano, que logo se torna um <br> ponto de referência para estudantes e famílias. Com o tempo as <br> senhoras Norma e Altiva assumem a loja, expandindo os produtos <br> oferecidos, mas Altiva deixa a sociedade nos primeiros anos. <br> Em fevereiro, o casal Siotani adquire a loja, modernizando-a e <br> mantendo viva a tradição viva a tradição de atendimento à comunidade. Assim, a <br>história do Bazar se entrelaça com a vida dos moradores, <br> refletindo transformações e desafios ao longo dos anos.</p>
+            fundado pelo casal Domingos e Maria Kano, que logo se torna um <br> ponto de referência para estudantes e
+            famílias. Com o tempo as <br> senhoras Norma e Altiva assumem a loja, expandindo os produtos <br>
+            oferecidos, mas Altiva deixa a sociedade nos primeiros anos. <br> Em fevereiro, o casal Siotani adquire a
+            loja, modernizando-a e <br> mantendo viva a tradição viva a tradição de atendimento à comunidade. Assim, a
+            <br>história do Bazar se entrelaça com a vida dos moradores, <br> refletindo transformações e desafios ao
+            longo dos anos.</p>
         </div>
         <img id="imagem0" src="../img/image.png" alt="">
       </section>
@@ -74,7 +82,11 @@
         <div>
           <h2>1985 - 1995</h2>
           <p>Na década em questão, o Sr intensifica a participação da <br>
-            Papelaria Japuiba na comunidade, especialmente junto às escolas<br> estaduais e ao Clube dos Lojistas da Casa Verde.Durante esse <br> período, começa a construção da sede própria em um terreno <br>arrendado defronte à papelaria,que atravessa o quarteirão.Em 11 de <br> setembro, a Papelaria Japuiba se trasfere para sua nova sede no nº<br>77, inaugurada com a presença de amigos, oarceiros comerciais,<br>familia e do pai do Sr.Mário</p>
+            Papelaria Japuiba na comunidade, especialmente junto às escolas<br> estaduais e ao Clube dos Lojistas da
+            Casa Verde.Durante esse <br> período, começa a construção da sede própria em um terreno <br>arrendado
+            defronte à papelaria,que atravessa o quarteirão.Em 11 de <br> setembro, a Papelaria Japuiba se trasfere para
+            sua nova sede no nº<br>77, inaugurada com a presença de amigos, oarceiros comerciais,<br>familia e do pai do
+            Sr.Mário</p>
         </div>
         <img id="imagem1" src="../img/image1.png" alt="">
       </section>
@@ -83,7 +95,9 @@
         <div>
           <h2>1999 - 2015</h2>
           <p>A Papelaria Japuíba ganha destaque na TV globo e em outra<br>
-            emissoras por exemplo de vendas com preço justo e <br> qualidade durante o período de Volta às Aulas. Essa reputação <br> é corroborada por pesquisas da SUNAB, atualmente <br>realizadas pelo PROCON.A loja celebra 50 anos de fundação,<br> consolidando sua posição como referência na comunidade.
+            emissoras por exemplo de vendas com preço justo e <br> qualidade durante o período de Volta às Aulas. Essa
+            reputação <br> é corroborada por pesquisas da SUNAB, atualmente <br>realizadas pelo PROCON.A loja celebra 50
+            anos de fundação,<br> consolidando sua posição como referência na comunidade.
           </p>
         </div>
         <img id="imagem" src="../img/image2.png" alt="">
@@ -91,27 +105,40 @@
       </section>
     </section>
   </section>
- 
+
+  <!-- FOOTER -->
+
   <footer>
     <div>
       <h1>Mapa do site</h1>
-      <a href="../index.html">Inicio</a>
+      <a href="inicio.html">Inicio</a>
       <a href="#home">Sobre</a>
-      <a href="../html/produtos.html">Produtos</a>
-      <a href="../html/contato.html">Contato</a>
+      <a href="produtos.html">Produtos</a>
+      <a href="contato.html">Contato</a>
     </div>
-    <img src="../img/Captura de Tela (145).png" alt="">
+
     <div>
       <h1>Marcas</h1>
-      <p>Tilibra</p>
-      <p>Foroni</p>
-      <p>Faber Castell</p>
-      <p>Jandaia</p>
+      <a
+        href="https://www.tilibraexpress.com.br/?gad_source=1&gclid=EAIaIQobChMIjdGu7OSHigMV9lVIAB3LXAENEAAYASAAEgL2xfD_BwE">Tilibra</a>
+      <a href="https://www.foroni.com.br/">Foroni</a>
+      <a href="https://www.lojafabercastell.com.br/?srsltid=AfmBOoogF__wWGtYidJ_tdDmtv6hpt0gi5M_2x3jYfV273j977hr1ZFU">Faber
+        Castell</a>
+      <a href="https://atacadojandaia.com.br/vitrine">Jandaia</a>
     </div>
+
     <button>
-      <a href="#home"> <img src="../img/chevron-up.svg" alt=""></a>
+      <a href="#home"><img src="../img/chevron-up.svg" alt="Seta para cima"></a>
     </button>
+
+    <div class="mapBox">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7317.28317764997!2d-46.662999719604464!3d-23.509415733734464!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cef7e56ae99d91%3A0x27b42065c81f2458!2sR.%20Ant%C3%B4nio%20Lopes%20Marin%2C%2077%20-%20Casa%20Verde%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2002516-050%2C%20Brasil!5e0!3m2!1spt-BR!2sus!4v1733094235655!5m2!1spt-BR!2sus"
+        style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
   </footer>
+
   <script src="../js/contato.js"></script>
 </body>
+
 </html>
